Added contact email

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 			</tr>
 		</table>
 		<hr>
+		<h1>Contact:</h1>
+		<p>therealhandsbooking@gmail.com</p>
 	</div>
 	<img id="band-columns" alt="John, Bryce, and David" src="images/band_columns.jpg">
 </body>
