FB icon displays properly

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<a href="https://therealhands.bandcamp.com/">Bandcamp</a> - <a href="https://soundcloud.com/the-real-hands">Soundcloud</a>
 			</div>
 			<div class="social-links">
-				<a href="https://www.facebook.com/therealhands"><img class="social-icon" alt="Facebook" src="images/FB-f-Logo__blue_72.png"></a>
+				<a href="https://www.facebook.com/therealhands"><img class="social-icon" alt="Facebook" src="images/FB-f-Logo__blue.png"></a>
 				<a href="https://www.instagram.com/real_hands/"><img class="social-icon" alt="Instagram" src="images/Instagram-v051916.png"></a>
 				<a href="https://twitter.com/real_hands"><img class="social-icon" alt="Twitter" src="images/TwitterLogo.png"></a>
 			</div>
