--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>The Real Hands</title>
 	<link rel="stylesheet" href="stylesheets/main.css">
+	<link rel="shortcut icon" href="favicon.ico"/>
 </head>
 <body>
 	<div class="main">
