--- a/index.html
+++ b/index.html
@@ -8,38 +8,35 @@
 	<link rel="shortcut icon" href="favicon.ico"/>
 </head>
 <body>
-	<div class="shell">
-		<div class="main">
-			<img class="logo" src="images/logo.png" alt="The Real Hands">
-			<div class="header-links">
-				<div class="music-links">
-					<a href="https://therealhands.bandcamp.com/">Bandcamp</a> - <a href="https://soundcloud.com/the-real-hands">Soundcloud</a>
-				</div>
-				<div class="social-links">
-					<a href="https://www.facebook.com/therealhands"><img class="social-icon" alt="Facebook" src="images/FB-f-Logo__blue.png"></a>
-					<a href="https://www.instagram.com/real_hands/"><img class="social-icon" alt="Instagram" src="images/Instagram-v051916.png"></a>
-					<a href="https://twitter.com/real_hands"><img class="social-icon" alt="Twitter" src="images/TwitterLogo.png"></a>
-				</div>
+	<div class="main">
+		<img class="logo" src="images/logo.png" alt="The Real Hands">
+		<div class="header-links">
+			<div class="music-links">
+				<a href="https://therealhands.bandcamp.com/">Bandcamp</a> - <a href="https://soundcloud.com/the-real-hands">Soundcloud</a>
 			</div>
+			<div class="social-links">
+				<a href="https://www.facebook.com/therealhands"><img class="social-icon" alt="Facebook" src="images/FB-f-Logo__blue.png"></a>
+				<a href="https://www.instagram.com/real_hands/"><img class="social-icon" alt="Instagram" src="images/Instagram-v051916.png"></a>
+				<a href="https://twitter.com/real_hands"><img class="social-icon" alt="Twitter" src="images/TwitterLogo.png"></a>
+			</div>
+		</div>
+		<hr>
+		<h1>Upcoming shows</h1>
+		<div id="shows-list">
+			<div class="show">
+				<span class="show-info">September 28th</span>
+				<span class="show-info"><a href="https://www.facebook.com/events/1398730790144269/">Valentino's Pizza</a></span>
+				<span class="show-info">San Marcos, TX</span>
+			</div>
+		</div>
+		<hr>
+		<div id="band-columns-wrapper">
+			<img id="band-columns" alt="John, Bryce, and David" src="images/band_columns.jpg">
+		</div>
+		<div id="contact-info">
 			<hr>
-			<h1>Upcoming shows</h1>
-			<p>Dates will be announced soon. Stay tuned...</p>
-			<table class="shows">
-				<tr>
-					<td>July 7th</td>
-					<td>Toms Roasting Co.</td>
-					<td>Austin, TX</td>
-					</tr>
-			</table>
-			<hr>
-			<div id="band-columns-wrapper">
-				<img id="band-columns" alt="John, Bryce, and David" src="images/band_columns.jpg">
-			</div>
-			<div id="contact-info">
-				<hr>
-	      	<h1>Contact:</h1>
-	      	<p>therealhandsbooking@gmail.com</p>
-			</div>
+		<h1>Contact:</h1>
+		<p>therealhandsbooking@gmail.com</p>
 		</div>
 	</div>
 </body>
